--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,32 @@
 services:
+
+  db_container:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env
+
   web_app:
     build: .
     image: "my_app"
     ports:
      - "5001:5000"
+    depends_on:
+      - db_container
+
+  rebbit_mq:
+    hostname: rebbit_mq
+    image: rabbitmq:3-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    env_file: .env
+
+  celery_worker:
+    build: .
+    command: celery -A celery_tasks.celery_app worker -l info --pool=solo
+    environment:
+      - rabbit_host=rebbit_mq
+    depends_on:
+      - db_container
